# Literati.Stock

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .windsurfrules  AGENTS.md  Dockerfile  GEMINI.md  INVESTMENT_DECISION.md  README.md  alembic.ini  compose.yaml  pyproject.toml
.claude/: settings.json
.claude/commands/dp/: change.md  init.md  pre-pr.md  security-scan.md  setup-ci.md  sync-rules.md
.cursor/rules/: devpro-policy.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
migrations/: env.py
migrations/versions/: 0001_add_ops_tables.py  0002_add_price_domain.py  0003_add_signal_event.py  0004_add_stock_universe.py  0005_add_chip_tables.py
openspec/changes/chip-data-chase-signal/: tasks.md
openspec/changes/ingest-foundation/: make-vs-buy.md  proposal.md  tasks.md
openspec/changes/price-domain/: tasks.md
openspec/changes/signal-notify-discord/: README.md  tasks.md
openspec/changes/signal-volume-surge/: README.md  make-vs-buy.md  proposal.md  tasks.md
openspec/changes/stock-universe-ingest/: qa-test-scope.md  tasks.md
openspec/specs/chip-data/: spec.md
openspec/specs/data-ingestion/: spec.md
openspec/specs/price-domain/: spec.md
openspec/specs/signal-engine/: spec.md
openspec/specs/signal-notification/: spec.md
openspec/specs/stock-universe/: spec.md
src/literati_stock/: __init__.py
src/literati_stock/api/: main.py
src/literati_stock/chip/: __init__.py  jobs.py  models.py  transform.py
src/literati_stock/core/: logging.py  settings.py
src/literati_stock/ingest/: cli.py  db.py  models.py  scheduler.py  sentinel.py  storage.py
src/literati_stock/notify/: __init__.py  base.py  jobs.py  service.py  templates.py
src/literati_stock/price/: __init__.py  jobs.py  models.py  transform.py
src/literati_stock/signal/: __init__.py  base.py  cli.py  jobs.py  models.py  service.py
src/literati_stock/universe/: __init__.py  daily_ingest.py  jobs.py  (+2 more)
tests/: conftest.py
tests/integration/: conftest.py  test_api_healthz.py  test_chip_transform.py  test_cli_run_once.py  test_cli_transform_prices.py  test_db_migrations.py  test_notify_service.py  test_price_transform.py  test_signal_service.py  test_storage.py  test_universe.py
tests/unit/: test_chip_jobs.py  test_cli_parser.py  test_finmind_client.py  test_finmind_raw_schemas.py  test_institutional_chase.py  test_logging.py  test_margin_schema.py  test_notify_cli.py  test_notify_discord.py  test_notify_jobs.py  test_notify_templates.py  test_price_jobs.py  test_scheduler.py  test_sentinel.py  test_settings.py  test_signal_cli.py  test_signal_jobs.py  test_taiwan_stock_info_schema.py  test_universe_cli.py  test_universe_jobs.py  test_volume_surge_red.py
(+43 files in other folders)
